--- a/assets/DT600c/DT600c.html
+++ b/assets/DT600c/DT600c.html
@@ -5,6 +5,5 @@ parent: DT600c
 ---
 <h2>{{page.title}}</h2>
 <ul>
-    <li><a href="/EFL30/catalog/EFL30中文单页.pdf">中文单页</a></li>
-    <li><a href="/EFL30/catalog/EFL30英文单页.pdf">英文单页</a></li>
+    <li><a href="/assets/DT600c/pages_en.pdf">英文单页</a></li>
 </ul>
