--- a/EFL30.html
+++ b/EFL30.html
@@ -5,3 +5,4 @@ permalink: /EFL30/
 has_children: true
 ---
 <h2>EFL30</h2>
+<div style="float: right;"><img src="/assets/EFL30/EFL30.jpg" alt="EFL30 image" width="250px"></div>
