--- a/app(HDM).html
+++ b/app(HDM).html
@@ -5,5 +5,4 @@ permalink: /app_files/
 has_children: true
 ---
 <h2>HDM(Hafele Dialock Manager)</h2>
-
-
+<div style="float: right;"><img src="/assets/app-hdm/HDM.jpg" alt="HDM image" width="250px"></div>
