--- a/FT200.html
+++ b/FT200.html
@@ -5,3 +5,4 @@ permalink: /FT200
 has_children: true
 ---
 <h2>FT200</h2>
+<div style="float: right;"><img src="/assets/FT200/FT200.jpg" alt="FT200 image" width="250px"></div>
