--- a/DT600c.html
+++ b/DT600c.html
@@ -5,4 +5,4 @@ permalink: /DT600c/
 has_children: true
 ---
 <h2>DT600c</h2>
-<div style="float: right;"><img src="/assets/DT600c/DT600c.jpg" alt="DT600c image" width="250px"></div>
+<div style="float: right; max-width: 50%; height: auto;"><img src="/assets/DT600c/DT600c.jpg" alt="DT600c image"></div>
