--- a/FT120.html
+++ b/FT120.html
@@ -5,4 +5,4 @@ permalink: /FT120/
 has_children: true
 ---
 <h2>FT120</h2>
-<div style="float: right;"><img src="/assets/FT120/FT120.jpg" alt="FT120 image" width="250px"></div>
+<div style="float: right; max-width: 50%; height: auto;"><img src="/assets/FT120/FT120.jpg" alt="FT120 image"></div>
