add another video

--- a/assets/app-hdm/loading-macro.html
+++ b/assets/app-hdm/loading-macro.html
@@ -5,5 +5,5 @@ parent: app(HDM)
 ---
 <h3>HDM(app)相关视频</h3>
 <ul>
-    <li>导入扩展文件(add-on) <a download href="/assets/app-hdm/loading-macro.mov">下载</a></li>
+    <li>导入扩展文件(add-on) <a download href="/assets/app-hdm/sample_640x360.mp4">下载</a></li>
 </ul>
