--- a/assets/app-hdm/loading-macro.html
+++ b/assets/app-hdm/loading-macro.html
@@ -5,5 +5,5 @@ parent: app(HDM)
 ---
 <h3>HDM(app)相关视频</h3>
 <ul>
-    <li>导入扩展文件(add-on) <a download href="/assets/app-hdm/loading-macro.mp4">下载</a></li>
+    <li>导入扩展文件(add-on) <a href="https://v.youku.com/v_show/id_XNTgzMjMxODY2NA==.html">预览</a></li>
 </ul>
