video url from youku to bilibili

--- a/assets/FT200/FT200-videos.html
+++ b/assets/FT200/FT200-videos.html
@@ -7,5 +7,5 @@ parent: FT200
 <ul>
     <li><a href="https://v.youku.com/v_show/id_XNTgzMjcwNTI1Mg==.html">编制用户卡</a></li>
     <li><a href="https://v.youku.com/v_show/id_XNTgzMjQxNTE2OA==.html">调节开锁时间</a></li>
-    <li><a href="https://v.youku.com/v_show/id_XNTgzMjcwMDYyNA==.html">摆货卡制作</a></li>
+    <li><a href="https://www.bilibili.com/video/BV1XL4y1t7gA?share_source=copy_web">摆货卡制作</a></li>
 </ul>
