video url from youku to bilibili

--- a/assets/FT200/FT200-videos.html
+++ b/assets/FT200/FT200-videos.html
@@ -5,7 +5,7 @@ parent: FT200
 ---
 <h2>{{page.title}}</h2>
 <ul>
-    <li><a href="https://v.youku.com/v_show/id_XNTgzMjcwNTI1Mg==.html">编制用户卡</a></li>
-    <li><a href="https://v.youku.com/v_show/id_XNTgzMjQxNTE2OA==.html">调节开锁时间</a></li>
+    <li><a href="https://www.bilibili.com/video/BV1Ca411q7ws?share_source=copy_web">编制用户卡</a></li>
+    <li><a href="https://www.bilibili.com/video/BV1PP4y1J7zC?share_source=copy_web">调节开锁时间</a></li>
     <li><a href="https://www.bilibili.com/video/BV1XL4y1t7gA?share_source=copy_web">摆货卡制作</a></li>
 </ul>
