--- a/assets/app-hdm/loading-macro.html
+++ b/assets/app-hdm/loading-macro.html
@@ -5,5 +5,6 @@ parent: app(HDM)
 ---
 <h3>HDM(app)相关视频</h3>
 <ul>
-    <li>导入扩展文件(add-on) <a href="https://v.youku.com/v_show/id_XNTgzMjMxODY2NA==.html">预览</a></li>
+    <li><a href="https://www.bilibili.com/video/BV1zZ4y1S7y5?share_source=copy_web">导入扩展文件(add-on)</a></li>
 </ul>
+<p>to be continued</p>
