--- a/assets/fingerprint/st17/st17.html
+++ b/assets/fingerprint/st17/st17.html
@@ -3,6 +3,7 @@ layout: page
 title: ST17
 parent: 指纹密码锁
 ---
+<div style="float: right; max-width: 30%; height: auto;"><img src="/assets/fingerprint/st17/ST17-A.jpg" alt="ST17 image"></div>
 <h2>{{page.title}}</h2>
 <ul>
     <li><a download href="/assets/fingerprint/st17/ST17-holes.pdf">ST17开孔图</a></li>
