add pic for st18

--- a/assets/fingerprint/st18/st18.html
+++ b/assets/fingerprint/st18/st18.html
@@ -3,6 +3,7 @@ layout: page
 title: ST18
 parent: 指纹密码锁
 ---
+<div style="float: right; max-width: 25%; height: auto;"><img src="/assets/fingerprint/{{page.title}}/ST18-A.jpg" alt="ST18 image"></div>
 <h2>{{page.title}}</h2>
 <ul>
     <li><a download href="/assets/fingerprint/st17/ST17-holes.pdf">{{page.title}}开孔图</a></li>
