--- a/assets/fingerprint/st18/st18.html
+++ b/assets/fingerprint/st18/st18.html
@@ -3,9 +3,9 @@ layout: page
 title: ST18
 parent: 指纹密码锁
 ---
-<div style="float: right; max-width: 25%; height: auto;"><img src="/assets/fingerprint/{{page.title}}/ST18-A.jpg" alt="ST18 image"></div>
+<div style="float: right; max-width: 25%; height: auto;"><img src="/assets/fingerprint/st18/ST18-A.jpg" alt="ST18 image"></div>
 <h2>{{page.title}}</h2>
 <ul>
-    <li><a download href="/assets/fingerprint/st17/ST17-holes.pdf">{{page.title}}开孔图</a></li>
-    <li><a download href="/assets/fingerprint/st17/ST17-instruction-manual.pdf">{{page.title}}说明书</a></li>
+    <li><a download href="/assets/fingerprint/st18/ST18-holes.pdf">{{page.title}}开孔图</a></li>
+    <li><a download href="/assets/fingerprint/st18/ST18-instruction-manual.pdf">{{page.title}}说明书</a></li>
 </ul>
