--- a/assets/power-supply/domestics/catalogs.html
+++ b/assets/power-supply/domestics/catalogs.html
@@ -6,5 +6,5 @@ grand_parent: 电源/power supply
 ---
 <h2>{{page.title}}</h2>
 <ul>
-    <li><a href="\assets\power-supply\domestics\domestics-catalog.pdf">单页</a></li>
+    <li><a href="\assets\power-supply\domestics\domestics-catalog.pdf">中文单页</a></li>
 </ul>
