--- a/assets/power-supply/overseas/overseas.html
+++ b/assets/power-supply/overseas/overseas.html
@@ -5,5 +5,5 @@ parent: 电源/power supply
 ---
 <h2>{{page.title}}</h2>
 <ul>
-    <li><a href="\assets\power-supply\overseas\overseas-catalog.pdf">单页</a></li>
+    <li><a href="\assets\power-supply\overseas\overseas-catalog.pdf">英文单页</a></li>
 </ul>
