--- a/assets/fingerprint/st17.html
+++ b/assets/fingerprint/st17.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: ST17
-parent: 指纹密码锁
+parent: 指纹密码锁/fingerprint
 ---
 <div style="float: right; max-width: 20%; height: auto;"><img src="/assets/fingerprint/st17/ST17-A.jpg" alt="ST17 image"></div>
 <h2>{{page.title}}</h2>
