--- a/assets/fingerprint/st18.html
+++ b/assets/fingerprint/st18.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: ST18
-parent: 指纹密码锁
+parent: 指纹密码锁/fingerprint
 ---
 <div style="float: right; max-width: 20%; height: auto;"><img src="/assets/fingerprint/st18/ST18-A.jpg" alt="ST18 image"></div>
 <h2>{{page.title}}</h2>
