--- a/assets/app-hdm/loading-macro.html
+++ b/assets/app-hdm/loading-macro.html
@@ -3,8 +3,10 @@ layout: page
 title: 操作视频/Video
 parent: app(HDM)
 ---
-<h3>HDM(app)相关视频</h3>
-<ul>
-    <li><a href="https://www.bilibili.com/video/BV1zZ4y1S7y5?share_source=copy_web">导入扩展文件(add-on)</a></li>
-</ul>
+<h3>使用app刷宏(add-on)</h3>
+<div style="padding-bottom: 75%; position: relative;">
+    <iframe src="//player.bilibili.com/player.html?aid=380563295&bvid=BV1zZ4y1S7y5&cid=480544872&page=1" 
+    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
+    style="width: 100%; height: 100%; position: absolute;"> </iframe>
+</div>
 <p>to be continued</p>
