--- a/assets/emergency/aux-in.html
+++ b/assets/emergency/aux-in.html
@@ -4,7 +4,8 @@ title: 使用扩展输入端口
 parent: 紧急开锁/emergency
 ---
 <h2>{{page.title}}</h2>
-<div style="padding-bottom: 56.25%; position: relative;"><iframe src="//player.bilibili.com/player.html?aid=808072458&bvid=BV1J34y1B7WW&cid=480970781&page=1" 
+<div style="padding-bottom: 56.25%; position: relative;">
+    <iframe src="//player.bilibili.com/player.html?aid=808072458&bvid=BV1J34y1B7WW&cid=480970781&page=1" 
     scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
     style="width: 100%; height: 100%; position: absolute;"> </iframe>
 </div>
