modified pic page

--- a/assets/emergency/test-unit.html
+++ b/assets/emergency/test-unit.html
@@ -2,10 +2,38 @@
 layout: page
 title: 使用测试器手动开锁
 parent: 紧急开锁/emergency
+has_children: true
 ---
-<h2>{{page.title}}</h2>
-<ul>
-    <li><a href="\assets\emergency\test-unit\go-to-lock.jpg">测试器连接一个锁头</a></li>
-    <li><a href="\assets\emergency\test-unit\go-to-mla6p.jpg">测试器连接多个锁头</a></li>
-    <li><a href="\assets\emergency\test-unit\list.xlsx">物料清单</a></li>
-</ul>
+<head>
+    <style>
+        table {margin-top: 5%;}
+    </style>
+</head>
+<body>
+    <h2>{{page.title}}</h2>
+    <table>
+        <caption>物料清单</caption>
+        <tr>
+            <th>名称</th>
+            <th>编号</th>
+            <th>数量</th>
+        </tr>
+        <tr>
+            <td>紧急开启连接线</td>
+            <td>910.51.094</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>连接器（米白色）</td>
+            <td>237.56.370</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>测试器</td>
+            <td>237.56.993</td>
+            <td>1</td>
+        </tr>
+    </table>
+</body>
+
+  
