added table on the page

--- a/app(HDM).html
+++ b/app(HDM).html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: app(HDM)
-permalink: /app_files/
+permalink: /app_files
 has_children: true
 ---
 <h2>HDM(Hafele Dialock Manager)</h2>
