--- a/assets/emergency/aux-in.html
+++ b/assets/emergency/aux-in.html
@@ -3,10 +3,44 @@ layout: page
 title: 使用扩展输入端口
 parent: 紧急开锁/emergency
 ---
-<h2>{{page.title}}</h2>
-<div style="padding-bottom: 56.25%; position: relative;">
-    <iframe src="//player.bilibili.com/player.html?aid=808072458&bvid=BV1J34y1B7WW&cid=480970781&page=1" 
-    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
-    style="width: 100%; height: 100%; position: absolute;"> </iframe>
-</div>
-<p><a href="\assets\emergency\aux-in-list.xlsx">物料清单</a></p>
+<head>
+    <style>
+        .responsive {
+            padding-bottom: 56.25%;
+            position: relative;
+        }
+        .video {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+        }
+    </style>
+</head>
+<body>
+    <h2>{{page.title}}</h2>
+    <div class="responsive">
+        <iframe src="//player.bilibili.com/player.html?aid=808072458&bvid=BV1J34y1B7WW&cid=480970781&page=1" 
+        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
+    </div>
+    <p>使用宏(add-on)激活控制器的扩展输入端口，需采购物料如下：</p>
+    <table>
+        <tr>
+            <th>名称</th>
+            <th>编号</th>
+            <th>数量</th>
+        </tr>
+        <tr>
+            <td>AKC卡片</td>
+            <td>917.64.980</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>宏(add-on)文件</td>
+            <td>910.52.191</td>
+            <td>1</td>
+        </tr>
+    </table>
+    <p>并请下载<a href="/app_files">app HDM</a></p>
+</body>
+
+
