add title to add-on page

--- a/assets/app-hdm/add-on.html
+++ b/assets/app-hdm/add-on.html
@@ -4,3 +4,9 @@ title: 功能扩展文件/Add-on
 parent: app(HDM)
 has_children: true
 ---
+<html>
+    <head></head>
+    <body>
+        <h2>{{ page.title }}</h2>
+    </body>
+</html>
