--- a/assets/fingerprint/st17.html
+++ b/assets/fingerprint/st17.html
@@ -3,9 +3,18 @@ layout: page
 title: ST17
 parent: 指纹密码锁/fingerprint
 ---
-<div style="float: right; max-width: 20%; height: auto;"><img src="/assets/fingerprint/st17/ST17-A.jpg" alt="ST17 image"></div>
-<h2>{{page.title}}</h2>
-<ul>
-    <li><a href="/assets/fingerprint/st17/ST17-holes.pdf">ST17开孔图</a></li>
-    <li><a href="/assets/fingerprint/st17/ST17-instruction-manual.pdf">ST17说明书</a></li>
-</ul>
+<html>
+    <head>
+        <style>
+            .responsive {float: right; width: 30%; height: auto;}
+        </style>
+    </head>
+    <body>
+        <div class="responsive"><img src="/assets/fingerprint/st17/ST17-A.jpg" alt="ST17 image"></div>
+        <h2>{{page.title}}</h2>
+        <ul>
+            <li><a href="/assets/fingerprint/st17/ST17-holes.pdf">ST17开孔图</a></li>
+            <li><a href="/assets/fingerprint/st17/ST17-instruction-manual.pdf">ST17说明书</a></li>
+        </ul>
+    </body>
+</html>
