modified st17 st18 pages

--- a/assets/fingerprint/st17.html
+++ b/assets/fingerprint/st17.html
@@ -6,7 +6,7 @@ parent: 指纹密码锁/fingerprint
 <html>
     <head>
         <style>
-            .responsive {float: right; width: 30%; height: auto;}
+            .responsive {width: 20%; height: auto; float: right;}
         </style>
     </head>
     <body>
@@ -16,5 +16,6 @@ parent: 指纹密码锁/fingerprint
             <li><a href="/assets/fingerprint/st17/ST17-holes.pdf">ST17开孔图</a></li>
             <li><a href="/assets/fingerprint/st17/ST17-instruction-manual.pdf">ST17说明书</a></li>
         </ul>
+        
     </body>
 </html>
