add test unit catalog to the folder

--- a/assets/emergency/test-unit.html
+++ b/assets/emergency/test-unit.html
@@ -19,21 +19,23 @@ has_children: true
             <th>数量</th>
         </tr>
         <tr>
-            <td>紧急开启连接线</td>
+            <td><a href="https://www.hafele.com.de/en/product/emerg.opening-cable-f.efl3-1m/0000001800029ca700030023/">
+                紧急开启连接线</a></td>
             <td>910.51.094</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>连接器（米白色）</td>
+            <td><a href="https://www.hafele.com.de/en/product/y-adapter-acc-for-efl-3-dialock-furniture-lock/000000650002597600030023/">
+                连接器(米白色)</a></td>
             <td>237.56.370</td>
             <td>1</td>
         </tr>
         <tr>
-            <td>测试器</td>
+            <td><a href="https://www.hafele.com.de/en/product/test-device-for-efl-3-dialock-furniture-lock/000000620003eecf00020023/">
+                测试器</a></td>
             <td>237.56.993</td>
             <td>1</td>
         </tr>
     </table>
+    <p><a href="\assets\emergency\test-unit\test-unit-combo.pdf">英文单页</a></p>
 </body>
-
-  
