add fcc link for ft200

--- a/assets/FT200/FT200-certification.html
+++ b/assets/FT200/FT200-certification.html
@@ -5,5 +5,7 @@ parent: FT200
 ---
 <h2>{{page.title}}</h2>
 <ul>
-    <li><a href="/assets/FT200/certification/FCC 认证 FT200.pdf">FCC认证</a></li>
+    <li><a href="/assets/FT200/certification/FCC 认证 FT200.pdf">FCC证书</a><br>
+        点击<a href="https://apps.fcc.gov/oetcf/eas/reports/ViewExhibitReport.cfm?mode=Exhibits&RequestTimeout=500&calledFromFrame=N&application_id=E0dS5NcsYsIp5mcUuXktig%3D%3D&fcc_id=TCN021">
+            此处</a>查看认证详细资料</li>
 </ul>
