modified index page

--- a/index.html
+++ b/index.html
@@ -4,5 +4,10 @@
 
 layout: home
 ---
-<h2>海福乐(Hafele)中国子公司</h2>
-<h3>电子锁产品</h3>
+<html>
+    <head></head>
+    <body>
+        <h2>海福乐(Hafele)中国子公司</h2>
+        <h3>电子锁产品</h3>
+    </body>
+</html>
