add link to titles

--- a/DT510.html
+++ b/DT510.html
@@ -8,10 +8,13 @@ has_children: true
     <head>
         <style>
             .responsive {float: right; width: 40%; height: auto;}
+            .title {color: #991601;}
         </style>
     </head>
     <body>
-        <h2>{{ page.title }}</h2>
+        <h2><a class="title"
+            href="https://www.hafele.com.de/en/product/dt-510-electronic-profile-cylinder-optional-versions/000000880000ac3000020023/#SearchParameter=&@QueryTerm=dt510&Category=N1MKAOsCQPAAAAFz6vk3OCHk&@P.FF.followSearch=9688&PageNumber=1&OriginalPageSize=12&PageSize=12&Position=1&OrigPos=18&ProductListSize=26&PDP=true">
+            {{ page.title }}</a></h2>
         <div class="responsive"><img src="\assets\DT510\dt510.jpg" alt=""></div>
     </body>
 </html>
