--- a/EFL3.html
+++ b/EFL3.html
@@ -8,10 +8,13 @@ has_children: true
     <head>
         <style>
             .responsive {float: right; width: 35%; height: auto;}
+            .title {color: #991601;}
         </style>
     </head>
     <body>
-        <h2>{{ page.title }}</h2>
+        <h2><a class="title"
+            href="https://www.hafele.com.de/en/product/furniture-lock-haefele-dialock-efl-3-3c-mains-operated-lock/0000015f0001e57b00020023/#SearchParameter=&@QueryTerm=efl3&@P.FF.followSearch=9690&PageNumber=1&OriginalPageSize=12&PageSize=12&Position=1&OrigPos=1&ProductListSize=46&PDP=true">
+            {{ page.title }}</a></h2>
         <div class="responsive"><img src="\assets\EFL3\EFL3.jpg" alt=""></div>
     </body>
 </html>
