add link to title

--- a/DT600c.html
+++ b/DT600c.html
@@ -4,5 +4,15 @@ title: DT600c
 permalink: /DT600c/
 has_children: true
 ---
-<h2>DT600c</h2>
-<div style="float: right; max-width: 50%; height: auto;"><img src="/assets/DT600c/DT600c.jpg" alt="DT600c image"></div>
+<head>
+    <style>
+        .responsive {float: right; width: 50%; height: auto;}
+        .title {color: #991601;}
+    </style>
+</head>
+<body>
+    <h2><a class="title"
+            href="https://www.hafele.com.de/en/product/door-terminal-module-dt-600-haefele-dialock-for-narrow-frame-doors-with-requirements-on-fire-resistance-smoke-control-legic-sup-sup-/000000d70001bc1600070023/#SearchParameter=&@QueryTerm=dt600&@P.FF.followSearch=9688&PageNumber=1&OriginalPageSize=12&PageSize=12&Position=1&OrigPos=7&ProductListSize=29&PDP=true">
+            {{ page.title }}</a></h2>
+    <div class="responsive"><img src="/assets/DT600c/DT600c.jpg" alt=""></div>
+</body>
