--- a/EFL30.html
+++ b/EFL30.html
@@ -4,5 +4,17 @@ title: EFL30
 permalink: /EFL30/
 has_children: true
 ---
-<h2>EFL30</h2>
-<div style="float: right; max-width: 45%; height: auto;"><img src="/assets/EFL30/EFL30.jpg" alt="EFL30 image"></div>
+<html>
+    <head>
+        <style>
+            .responsive {float: right; width: 40%; height: auto;}
+            .title {color: #991601;}
+        </style>
+    </head>
+    <body>
+        <h2><a class="title"
+            href="https://www.hafele.com.de/en/product/furniture-lock/0000017800029f6a00090023/#SearchParameter=&@QueryTerm=efl30&@P.FF.followSearch=9563&PageNumber=1&OriginalPageSize=12&PageSize=12&Position=1&OrigPos=1&ProductListSize=16&PDP=true">
+            {{ page.title }}</a></h2>
+        <div class="responsive"><img src="/assets/EFL30/EFL30.jpg" alt=""></div>
+    </body>
+</html>
