--- a/FT120.html
+++ b/FT120.html
@@ -4,5 +4,17 @@ title: FT120
 permalink: /FT120/
 has_children: true
 ---
-<h2>FT120</h2>
-<div style="float: right; max-width: 50%; height: auto;"><img src="/assets/FT120/FT120.jpg" alt="FT120 image"></div>
+<html>
+    <head>
+        <style>
+            .responsive {float: right; width: 50%; height: auto;}
+            .title {color: #991601;}
+        </style>
+    </head>
+    <body>
+        <h2><a class="title"
+            href="https://www.hafele.com.de/en/product/furniture-terminal-ft-120-dialock-for-controlling-efl-locks/000000200003c0e900070023/#SearchParameter=&@QueryTerm=ft120&@P.FF.followSearch=9585&PageNumber=1&OriginalPageSize=12&PageSize=12&Position=1&OrigPos=1&ProductListSize=22&PDP=true">
+            {{ page.title }}</a></h2>
+        <div class="responsive"><img src="/assets/FT120/FT120.jpg" alt=""></div>
+    </body>
+</html>
