--- a/FT200.html
+++ b/FT200.html
@@ -4,5 +4,17 @@ title: FT200
 permalink: /FT200
 has_children: true
 ---
-<h2>FT200</h2>
-<div style="float: right; max-width: 50%; height: auto;"><img src="/assets/FT200/FT200.jpg" alt="FT200 image"></div>
+<html>
+    <head>
+        <style>
+            .responsive {float: right; width: 50%; height: auto;}
+            .title {color: #991601;}
+        </style>
+    </head>
+    <body>
+        <h2><a class="title"
+            href="https://www.hafele.com.de/en/product/furniture-terminal-ft-200-ft-200-cap-dialock-for-controlling-efl-furniture-locks-connection-for-2-fan-200-antennas/0000012d0001095800020023/#SearchParameter=&@QueryTerm=ft200&@P.FF.followSearch=8831&PageNumber=1&OriginalPageSize=12&PageSize=12&Position=1&OrigPos=1&ProductListSize=169&PDP=true">
+            {{ page.title }}</a></h2>
+        <div class="responsive"><img src="/assets/FT200/FT200.jpg" alt=""></div>
+    </body>
+</html>
