modified the part of app(HDM)

--- a/app(HDM).html
+++ b/app(HDM).html
@@ -4,5 +4,40 @@ title: app(HDM)
 permalink: /app_files
 has_children: true
 ---
-<h2>HDM(Hafele Dialock Manager)</h2>
-<div style="float: right; max-width: 30%; height: auto;"><img src="/assets/app-hdm/HDM.jpg" alt="HDM image"></div>
+<head>
+    <style>
+        table {margin-top: 5%;}
+        caption {text-align: left;}
+    </style>
+    <link rel="stylesheet" href="\css\lightbox.min.css">
+    
+</head>
+<body>
+    <h2>HDM(Hafele Dialock Manager)</h2>
+    <table>
+        <caption >使用该app编制设备，需要用到以下三种物料：</caption>
+        <tr>
+            <th>名称</th>
+            <th>编号</th>
+            <th>数量</th>
+        </tr>
+        <tr>
+            <td>
+                <a href="\assets\app-hdm\akc.jpg" data-lightbox="akc">AKC(编程卡片)</a>
+            </td>
+            <td>917.64.980</td>
+            <td>1套(3张)</td>
+        </tr>
+        <tr>
+            <td><a href="\assets\app-hdm\add-on.html">宏文件(add-on)</a></td>
+            <td>910.52.191</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td><a href="\assets\app-hdm\apk.html">app(HDM)</a></td>
+            <td></td>
+        </tr>
+    </table>
+    <script src="\js\lightbox-plus-jquery.js"></script>
+    
+</body>
