--- a/assets/app-hdm/apk.html
+++ b/assets/app-hdm/apk.html
@@ -3,8 +3,17 @@ layout: page
 title: 安装文件/APK
 parent: app(HDM)
 ---
-<h3>使用以下方式获取安装文件</h3>
-<ul>
-    <li>对于安卓(android)手机，请点击<a download href="/assets/app-hdm/apk/DialockManager-v0.9.59-397-(546)-management-pub-release.apk">此处</a>下载安装文件;</li>
-    <li>对于苹果手机(Iphone)，请在苹果应用商店(App Store)搜索关键字'Hafele Dialock'，即可找到该安装文件。</li>
-</ul>
+<head>
+    <style>
+        .responsive {float: right; width: 30%; height: auto;}
+    </style>
+</head>
+<body>
+    <h3>使用以下方式获取安装文件</h3>
+    <div class="responsive"><img src="/assets/app-hdm/HDM.jpg" alt="HDM image"></div>
+    <ul>
+        <li>对于安卓(android)手机，请点击<a download href="/assets/app-hdm/apk/DialockManager-v0.9.59-397-(546)-management-pub-release.apk">
+            此处</a>下载安装文件;</li>
+        <li>对于苹果手机(Iphone)，请在苹果应用商店(App Store)搜索关键字'Hafele Dialock'，即可找到该安装文件。</li>
+    </ul>
+</body>
