add pics for test unit combo

--- a/assets/emergency/aux-in.html
+++ b/assets/emergency/aux-in.html
@@ -15,6 +15,7 @@ parent: 紧急开锁/emergency
             position: absolute;
         }
     </style>
+    <link rel="stylesheet" href="\css\lightbox.min.css">
 </head>
 <body>
     <h2>{{page.title}}</h2>
@@ -30,17 +31,22 @@ parent: 紧急开锁/emergency
             <th>数量</th>
         </tr>
         <tr>
-            <td>AKC卡片</td>
+            <td>
+                <a href="\assets\app-hdm\akc.jpg" data-lightbox="akc">AKC(编程卡片)</a>
+            </td>
             <td>917.64.980</td>
-            <td>1</td>
+            <td>1套(3张)</td>
         </tr>
         <tr>
-            <td>宏(add-on)文件</td>
+            <td>
+                <a href="\assets\app-hdm\add-on.html">宏文件(add-on)</a>
+            </td>
             <td>910.52.191</td>
             <td>1</td>
         </tr>
     </table>
     <p>并请下载<a href="/app_files">app HDM</a></p>
+    <script src="\js\lightbox-plus-jquery.js"></script>
 </body>
 
 
