--- a/assets/emergency/test-unit.html
+++ b/assets/emergency/test-unit.html
@@ -8,6 +8,7 @@ has_children: true
     <style>
         table {margin-top: 5%;}
     </style>
+    <link rel="stylesheet" href="\css\lightbox.min.css">
 </head>
 <body>
     <h2>{{page.title}}</h2>
@@ -19,23 +20,27 @@ has_children: true
             <th>数量</th>
         </tr>
         <tr>
-            <td><a href="https://www.hafele.com.de/en/product/emerg.opening-cable-f.efl3-1m/0000001800029ca700030023/">
-                紧急开启连接线</a></td>
+            <td>
+                <a href="\assets\emergency\test-unit\emergency-openning-cable.jpg" data-lightbox="test-unit-combo">紧急开启连接线</a>
+            </td>
             <td>910.51.094</td>
             <td>1</td>
         </tr>
         <tr>
-            <td><a href="https://www.hafele.com.de/en/product/y-adapter-acc-for-efl-3-dialock-furniture-lock/000000650002597600030023/">
-                连接器(米白色)</a></td>
+            <td>
+                <a href="\assets\emergency\test-unit\adapter.jpg" data-lightbox="test-unit-combo">连接器(米白色)</a>
+            </td>
             <td>237.56.370</td>
             <td>1</td>
         </tr>
         <tr>
-            <td><a href="https://www.hafele.com.de/en/product/test-device-for-efl-3-dialock-furniture-lock/000000620003eecf00020023/">
-                测试器</a></td>
+            <td>
+                <a href="\assets\emergency\test-unit\test-unit.jpg" data-lightbox="test-unit-combo">测试器</a>
+            </td>
             <td>237.56.993</td>
             <td>1</td>
         </tr>
     </table>
     <p><a href="\assets\emergency\test-unit\test-unit-combo.pdf">英文单页</a></p>
+    <script src="\js\lightbox-plus-jquery.js"></script>
 </body>
