modified ft200 table words

--- a/assets/FT200/FT200-catalog.html
+++ b/assets/FT200/FT200-catalog.html
@@ -49,7 +49,7 @@ parent: FT200
         </tr>
         <tr>
             <td><a href="\assets\FT200\key.jpg" data-lightbox="key">卡片</a></td>
-            <td>根据标准(Mifare 或 Tag-it)和款式确定编号</td>
+            <td>根据标准(Mifare 或 Tag-it)，款式和颜色确定编号</td>
         </tr>
     </table>
     <ul>
