--- a/FT120.html
+++ b/FT120.html
@@ -14,7 +14,8 @@ has_children: true
     <body>
         <h2><a class="title"
             href="https://www.hafele.com.de/en/product/furniture-terminal-ft-120-dialock-for-controlling-efl-locks/000000200003c0e900070023/#SearchParameter=&@QueryTerm=ft120&@P.FF.followSearch=9585&PageNumber=1&OriginalPageSize=12&PageSize=12&Position=1&OrigPos=1&ProductListSize=22&PDP=true">
-            {{ page.title }}</a></h2>
+            {{ page.title }}</a>
+        </h2>
         <div class="responsive"><img src="/assets/FT120/FT120.jpg" alt=""></div>
     </body>
 </html>
