--- a/assets/fingerprint/st17.html
+++ b/assets/fingerprint/st17.html
@@ -13,8 +13,8 @@ parent: 指纹密码锁/fingerprint
         <div class="responsive"><img src="/assets/fingerprint/st17/ST17-A.jpg" alt="ST17 image"></div>
         <h2>{{page.title}}</h2>
         <ul>
-            <li><a href="/assets/fingerprint/st17/ST17-holes.pdf">ST17开孔图</a></li>
-            <li><a href="/assets/fingerprint/st17/ST17-instruction-manual.pdf">ST17说明书</a></li>
+            <li><a href="/assets/fingerprint/st17/ST17-holes.pdf">{{ page.title }}开孔图</a></li>
+            <li><a href="/assets/fingerprint/st17/ST17-instruction-manual.pdf">{{ page.title }}说明书</a></li>
         </ul>
         
     </body>
