--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -17,6 +17,7 @@ grand_parent: app(HDM)
         <li><a download href="/assets/app-hdm/add-on/FT200/DM22007-AlrmPrem_AKC151-153 FT200 V2.Signed.FT200.dlkAddon">151-153</a></li>
         <li><a download href="/assets/app-hdm/add-on/FT200/DM22009-AlmPrem FT200DualAnt.Signed.FT200.000 172.dlkAddon">172-174</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 430.dlkAddon">430-432</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 433.dlkAddon">433-435</a></li>
     </ul>
 </body>
 
