added dt710 pages

--- a/assets/DT700/documents.html
+++ b/assets/DT700/documents.html
@@ -11,16 +11,19 @@ parent: DT700
             <a href="\assets\DT700\dt700-synopsis.pdf">DT700概览(英文)</a>
         </li>
         <li>
+            <a href="\assets\DT700\dt700-synopsis-cn.pdf">DT700概览(中文)</a>
+        </li>
+        <li>
             <a href="\assets\DT700\components-details.pdf">DT700/710部件明细(英文)</a>
+        </li>
+        <li>
+            <a href="\assets\DT700\components-details-cn.pdf">DT700/710部件明细(中文)</a>
         </li>
         <li>
             <a href="\assets\DT700\instructions(en).pdf">DT700/710操作指导(英文)</a>
         </li>
         <li>
             <a href="\assets\DT700\instructions(cn).pdf">DT700/710操作指导(中文)</a>
-        </li>
-        <li>
-            <a href="\assets\DT700\dt700-catalog-cn.pdf">DT700/710单页(中文)</a>
         </li>
     </ul>
 </body>
