added video to emergency opening

--- a/assets/emergency/test-unit-multiple-locks.html
+++ b/assets/emergency/test-unit-multiple-locks.html
@@ -7,11 +7,17 @@ grand_parent: 紧急开锁/emergency
 <html>
     <head>
         <style>
-            .responsive {width: 80%; height: auto;}
+            img {width: 90%; height: auto;}
+            .responsive {padding-bottom: 75%; position: relative;}
+            .video {width: 100%; height: 100%; position: absolute;}
         </style>
     </head>
     <body>
         <h3>{{ page.title }}</h3>
-        <img src="\assets\emergency\test-unit\go-to-mla6p.jpg" alt="" class="responsive">
+        <img src="\assets\emergency\test-unit\go-to-mla6p.jpg" alt="">
+        <div class="responsive">
+            <iframe src="//player.bilibili.com/player.html?aid=893308883&bvid=BV1xP4y177th&cid=488375448&page=1" 
+            scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
+        </div>
     </body>
 </html>
