--- a/assets/emergency/test-unit-one-lock.html
+++ b/assets/emergency/test-unit-one-lock.html
@@ -7,11 +7,17 @@ grand_parent: 紧急开锁/emergency
 <html>
     <head>
         <style>
-            .responsive {width: 55%; height: auto;}
+            img {width: 60%; height: auto;}
+            .responsive {padding-bottom: 75%; position: relative;}
+            .video {width: 100%; height: 100%; position: absolute;}
         </style>
     </head>
     <body>
         <h3>{{ page.title }}</h3>
-        <img src="\assets\emergency\test-unit\go-to-lock.jpg" alt="" class="responsive">
+        <img src="\assets\emergency\test-unit\go-to-lock.jpg" alt="">
+        <div class="responsive">
+            <iframe src="//player.bilibili.com/player.html?aid=380778696&bvid=BV1Ff4y1F7iR&cid=488375442&page=1" 
+            scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
+        </div>
     </body>
 </html>
