--- a/assets/FT200/FT200-catalog.html
+++ b/assets/FT200/FT200-catalog.html
@@ -49,7 +49,9 @@ parent: FT200
         </tr>
         <tr>
             <td><a href="\assets\FT200\key.jpg" data-lightbox="key">卡片</a></td>
-            <td>根据标准(Mifare 或 Tag-it)，款式和颜色确定编号</td>
+            <td>根据标准(Mifare 或 Tag-it)，款式和颜色确定
+                <a download href="\assets\FT200\catalog\fancy-key-cards.pdf">编号</a>
+            </td>
         </tr>
     </table>
     <ul>
