make video go away from title

--- a/assets/app-hdm/loading-macro.html
+++ b/assets/app-hdm/loading-macro.html
@@ -6,14 +6,15 @@ parent: app(HDM)
 <head>
     <style>
         h3 {text-align: center;}
+        .video-wrapper {padding-bottom: 75%; position: relative; margin-top: 5%;}
+        .video {width: 100%; height: 100%; position: absolute;}
     </style>
 </head>
 <body>
     <h3>使用app刷宏(add-on)</h3>
-    <div style="padding-bottom: 75%; position: relative;">
+    <div class="video-wrapper">
         <iframe src="//player.bilibili.com/player.html?aid=380563295&bvid=BV1zZ4y1S7y5&cid=480544872&page=1" 
-        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
-        style="width: 100%; height: 100%; position: absolute;"> </iframe>
+        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
     </div>
     <p>to be continued</p>
 </body>
