--- a/assets/app-hdm/loading-macro.html
+++ b/assets/app-hdm/loading-macro.html
@@ -13,7 +13,7 @@ parent: app(HDM)
 <body>
     <h3>使用app刷宏(add-on)</h3>
     <div class="video-wrapper">
-        <iframe src="//player.bilibili.com/player.html?aid=380563295&bvid=BV1zZ4y1S7y5&cid=480544872&page=1" 
+        <iframe src="//player.bilibili.com/player.html?aid=508518740&bvid=BV1Fu411274J&cid=494750305&page=1" 
         scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
     </div>
     <p>to be continued</p>
