modified video url

--- a/assets/app-hdm/loading-macro.html
+++ b/assets/app-hdm/loading-macro.html
@@ -13,8 +13,9 @@ parent: app(HDM)
 <body>
     <h3>使用app刷宏(add-on)</h3>
     <div class="video-wrapper">
-        <iframe src="//player.bilibili.com/player.html?aid=508518740&bvid=BV1Fu411274J&cid=494750305&page=1" 
-        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
+        <iframe src="https://player.bilibili.com/player.html?aid=508518740&bvid=BV1Fu411274J&cid=494750305&page=1&as_wide=1&high_quality=1&danmaku=0" 
+        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video" 
+        sandbox="allow-same-origin allow-top-navigation allow-forms allow-scripts"> </iframe>
     </div>
     <p>to be continued</p>
 </body>
