modified one video page

--- a/assets/FT200/FT200-videos-decoration-key.html
+++ b/assets/FT200/FT200-videos-decoration-key.html
@@ -4,9 +4,16 @@ title: 摆货卡/decoration key
 parent: 操作视频/Videos
 grand_parent: FT200
 ---
-<h2>{{page.title}}</h2>
-<div style="padding-bottom: 75%; position: relative;">
-    <iframe src="//player.bilibili.com/player.html?aid=850478368&bvid=BV1XL4y1t7gA&cid=479263699&page=1" 
-    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
-    style="width: 100%; height: 100%; position: absolute;"> </iframe>
-</div>
+<head>
+    <style>
+        .title {text-align: center;}
+    </style>
+</head>
+<body>
+    <h2 class="title">{{page.title}}</h2>
+    <div style="padding-bottom: 75%; position: relative; margin-top: 5%;">
+        <iframe src="//player.bilibili.com/player.html?aid=850478368&bvid=BV1XL4y1t7gA&cid=479263699&page=1" 
+        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
+        style="width: 100%; height: 100%; position: absolute;"> </iframe>
+    </div>
+</body>
