modified video pages

--- a/assets/FT200/FT200-videos-openning-time.html
+++ b/assets/FT200/FT200-videos-openning-time.html
@@ -4,9 +4,16 @@ title: 调节开锁时间/openning time
 parent: 操作视频/Videos
 grand_parent: FT200
 ---
-<h2>{{page.title}}</h2>
-<div style="padding-bottom: 75%; position: relative;">
-    <iframe src="//player.bilibili.com/player.html?aid=893069621&bvid=BV1PP4y1J7zC&cid=480543803&page=1" 
-    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
-    style="width: 100%; height: 100%; position: absolute;"> </iframe>
-</div>
+<head>
+    <style>
+        h2 {text-align: center;}
+    </style>
+</head>
+<body>
+    <h2>{{page.title}}</h2>
+    <div style="padding-bottom: 75%; position: relative; margin-top: 5%;">
+        <iframe src="//player.bilibili.com/player.html?aid=893069621&bvid=BV1PP4y1J7zC&cid=480543803&page=1" 
+        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
+        style="width: 100%; height: 100%; position: absolute;"> </iframe>
+    </div>
+</body>
