--- a/assets/EFL50/videos.html
+++ b/assets/EFL50/videos.html
@@ -6,18 +6,18 @@ parent: EFL50
 <html>
     <head>
         <style>
-            h3 {text-align: center;}
-            .responsive {padding-bottom: 75%; position: relative;}
+            h2 {text-align: center;}
+            .responsive {padding-bottom: 75%; position: relative; margin-top: 5%;}
             .video {width: 100%; height: 100%; position: absolute;}
         </style>
     </head>
     <body>
-        <h3>安装视频1</h3>
+        <h2>安装视频1</h2>
         <div class="responsive">
             <iframe src="//player.bilibili.com/player.html?aid=893304689&bvid=BV1vP4y177wz&cid=489079495&page=1" 
             scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
         </div>
-        <h3>安装视频2</h3>
+        <h2>安装视频2</h2>
         <div class="responsive">
             <iframe src="//player.bilibili.com/player.html?aid=893268105&bvid=BV1sP4y177o9&cid=489078956&page=1" 
             scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
