--- a/assets/emergency/aux-in.html
+++ b/assets/emergency/aux-in.html
@@ -5,15 +5,9 @@ parent: 紧急开锁/emergency
 ---
 <head>
     <style>
-        .responsive {
-            padding-bottom: 56.25%;
-            position: relative;
-        }
-        .video {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-        }
+        h2 {text-align: center;}
+        .responsive {padding-bottom: 56.25%; position: relative; margin-top: 5%;}
+        .video {width: 100%; height: 100%; position: absolute;}
     </style>
     <link rel="stylesheet" href="\css\lightbox.min.css">
 </head>
