modified path to wt210 pic

--- a/WT210.html
+++ b/WT210.html
@@ -16,6 +16,6 @@ has_children: true
             href="https://www.hafele.com.de/en/product/wall-terminal-wt-210-dialock-for-indoor-or-outdoor-use/P-01238689/#SearchParameter=&@QueryTerm=wt210&Category=xagKAOsCLs8AAAF8v.4pXFSd&@P.FF.followSearch=9688&PageNumber=1&OriginalPageSize=12&PageSize=12&Position=1&OrigPos=1&ProductListSize=3&PDP=true">
             {{ page.title }}</a>
         </h2>
-        <div class="responsive"><img src="/assets/wt210/wt210.jpg" alt=""></div>
+        <div class="responsive"><img src="/assets/WT210/wt210.jpg" alt=""></div>
     </body>
 </html>
