added installation file

--- a/assets/WT210/wt210-diagram.html
+++ b/assets/WT210/wt210-diagram.html
@@ -15,4 +15,5 @@ parent: WT210
     <div class="responsive"><img src="\assets\WT210\wt210-button-for-out.jpg" alt=""></div>
     <h3>刷卡进，刷卡出</h3>
     <div class="responsive"><img src="\assets\WT210\wt210-key-for-out.jpg" alt=""></div>
+    <p>请点击<a href="\assets\WT210\wt210-installation.pdf">此处</a>查看安装指引</p>
 </body>
