added components page

--- a/assets/WT210/wt210-operation.html
+++ b/assets/WT210/wt210-operation.html
@@ -17,8 +17,5 @@ parent: WT210
         <iframe src="//player.bilibili.com/player.html?aid=679075669&bvid=BV1im4y1d7hz&cid=510891943&page=1" scrolling="no" 
         border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
     </div>
-    <ul>
-        <li><a href="/assets/wt210/wt210-catalog.pdf">产品单页</a></li>
-        <li><a href="\assets\WT210\wt210-operation-guide.pdf">操作手册</a></li>
-    </ul>
+    <p>请点击<a href="\assets\WT210\wt210-operation-guide.pdf">此处</a>查看操作手册</p>
 </body>
