--- a/assets/FT200/FT200-catalog.html
+++ b/assets/FT200/FT200-catalog.html
@@ -5,6 +5,7 @@ parent: FT200
 ---
 <head>
     <style>
+        h2 {text-align: center;}
         table {margin-top: 5%;}
     </style>
     <link rel="stylesheet" href="\css\lightbox.min.css">
