--- a/assets/WT210/wt210-components.html
+++ b/assets/WT210/wt210-components.html
@@ -8,6 +8,7 @@ parent: WT210
         h2{text-align: center;}
         table {margin-top: 5%;}
     </style>
+    <link rel="stylesheet" href="\css\lightbox.min.css">
 </head>
 <body>
     <h2>{{page.title}}</h2>
@@ -33,7 +34,14 @@ parent: WT210
             <td>833.02.999 </td>
             <td>1</td>
         </tr>
+        <tr>
+            <td><a href="\assets\FT200\key.jpg" data-lightbox="key">卡片</a></td>
+            <td>根据标准(Mifare 或 Tag-it)，款式和颜色确定
+                <a href="\assets\FT200\catalog\fancy-key-cards.pdf">编号</a>
+            </td>
+        </tr>
     </table>
     <p>请客户自主选购出门按钮</p>
     <p>点击<a href="\assets\WT210\wt210-catalog.pdf">此处</a>查看产品单页</p>
+    <script src="\js\lightbox-plus-jquery.js"></script>
 </body>
