added link to strike

--- a/assets/WT210/wt210-components.html
+++ b/assets/WT210/wt210-components.html
@@ -25,7 +25,7 @@ parent: WT210
             <td>1</td>
         </tr>
         <tr>
-            <td>电插锁/strike</td>
+            <td><a href="https://www.hafele.com.de/en/product/electric-strikes-dorma/P-00872529/">电插锁/strike</a></td>
             <td>911.68.019 </td>
             <td>1</td>
         </tr>
