--- a/assets/emergency/test-unit.html
+++ b/assets/emergency/test-unit.html
@@ -6,6 +6,7 @@ has_children: true
 ---
 <head>
     <style>
+        h2 {text-align: center;}
         table {margin-top: 5%;}
     </style>
     <link rel="stylesheet" href="\css\lightbox.min.css">
