added page for test unit

--- a/assets/FT200/FT200-videos.html
+++ b/assets/FT200/FT200-videos.html
@@ -4,4 +4,12 @@ title: 操作视频/Videos
 parent: FT200
 has_children: true
 ---
-<h2>{{page.title}}</h2>
+<head>
+    <style>
+        p {bottom: 10%;}
+    </style>
+</head>
+<body>
+    <h2>{{page.title}}</h2>
+    <p>请点击<a href="\assets\FT200\ft200-operation-guide.pdf">此处</a>下载英文操作指引</p>
+</body>
