--- a/assets/emergency/test-unit.html
+++ b/assets/emergency/test-unit.html
@@ -36,7 +36,7 @@ has_children: true
         </tr>
         <tr>
             <td>
-                <a href="\assets\emergency\test-unit\test-unit.jpg" data-lightbox="test-unit-combo">测试器</a>
+                <a href="\test-unit">测试器</a>
             </td>
             <td>237.56.993</td>
             <td>1</td>
