added p/n table to pages

--- a/EFL30.html
+++ b/EFL30.html
@@ -9,12 +9,28 @@ has_children: true
         <style>
             .responsive {float: right; width: 40%; height: auto;}
             .title {color: #991601;}
+            table {text-align: left; table-layout: auto; width: fit-content;}
         </style>
     </head>
     <body>
         <h2><a class="title"
-            href="https://www.hafele.com.de/en/product/furniture-lock/0000017800029f6a00090023/#SearchParameter=&@QueryTerm=efl30&@P.FF.followSearch=9563&PageNumber=1&OriginalPageSize=12&PageSize=12&Position=1&OrigPos=1&ProductListSize=16&PDP=true">
-            {{ page.title }}</a></h2>
+            href="https://www.hafele.com.de/en/product/-/P-01526829/#SearchParameter=&@QueryTerm=efl30&@P.FF.followSearch=9449&PageNumber=1&OriginalPageSize=12&PageSize=12&Position=1&OrigPos=4&ProductListSize=18&PDP=true">
+            {{ page.title }}</a>
+        </h2>
+        <table>
+            <tr>
+                <th>名称</th>
+                <th>编号</th>
+            </tr>
+            <tr>
+                <td>EFL30</td>
+                <td>237.59.070</td>
+            </tr>
+            <tr>
+                <td>EFL30C</td>
+                <td>237.59.071</td>
+            </tr>
+        </table>
         <div class="responsive"><img src="/assets/EFL30/EFL30.jpg" alt=""></div>
     </body>
 </html>
