--- a/test-unit.html
+++ b/test-unit.html
@@ -10,6 +10,8 @@ permalink: /test-unit
             .responsive {padding-bottom: 75%; position: relative; margin-top: 3%;}
             .video {width: 100%; height: 100%; position: absolute;}
             img {width: 55%; height: auto; margin-top: 5%;}
+            table {text-align: left; table-layout: auto; width: fit-content;}
+            th {width: 20%;}
         </style>
     </head>
     <body>
@@ -17,6 +19,12 @@ permalink: /test-unit
             href="https://www.hafele.com.de/en/product/test-device-for-efl-3-dialock-furniture-lock/P-00926526/">
             {{ page.title }}</a>
         </h2>
+        <table>
+            <tr>
+                <th>编号</th>
+                <td>237.56.993</td>
+            </tr>
+        </table>
         <img src="\assets\test-unit\test-unit.jpg" alt="">
         <p>测试器用于检测锁头EFL3/3c是否功能正常，如视频所示：</p>
         <div class="responsive">
