added p/n table to pages

--- a/EFL3.html
+++ b/EFL3.html
@@ -9,12 +9,28 @@ has_children: true
         <style>
             .responsive {float: right; width: 35%; height: auto;}
             .title {color: #991601;}
+            table {text-align: left; table-layout: auto; width: fit-content;}
         </style>
     </head>
     <body>
         <h2><a class="title"
             href="https://www.hafele.com.de/en/product/furniture-lock-haefele-dialock-efl-3-3c-mains-operated-lock/0000015f0001e57b00020023/#SearchParameter=&@QueryTerm=efl3&@P.FF.followSearch=9690&PageNumber=1&OriginalPageSize=12&PageSize=12&Position=1&OrigPos=1&ProductListSize=46&PDP=true">
-            {{ page.title }}</a></h2>
+            {{ page.title }}</a>
+        </h2>
+        <table>
+            <tr>
+                <th>名称</th>
+                <th>编号</th>
+            </tr>
+            <tr>
+                <td>EFL3</td>
+                <td>237.59.000</td>
+            </tr>
+            <tr>
+                <td>EFL3C</td>
+                <td>237.59.001</td>
+            </tr>
+        </table>
         <div class="responsive"><img src="\assets\EFL3\EFL3.jpg" alt=""></div>
     </body>
 </html>
