--- a/FT120.html
+++ b/FT120.html
@@ -9,6 +9,8 @@ has_children: true
         <style>
             .responsive {float: right; width: 50%; height: auto;}
             .title {color: #991601;}
+            table {text-align: left; table-layout: auto; width: fit-content;}
+            th {width: 20%;}
         </style>
     </head>
     <body>
@@ -16,6 +18,12 @@ has_children: true
             href="https://www.hafele.com.de/en/product/furniture-terminal-ft-120-dialock-for-controlling-efl-locks/000000200003c0e900070023/#SearchParameter=&@QueryTerm=ft120&@P.FF.followSearch=9585&PageNumber=1&OriginalPageSize=12&PageSize=12&Position=1&OrigPos=1&ProductListSize=22&PDP=true">
             {{ page.title }}</a>
         </h2>
+        <table>
+            <tr>
+                <th>编号</th>
+                <td>237.58.111</td>
+            </tr>
+        </table>
         <div class="responsive"><img src="/assets/FT120/FT120.jpg" alt=""></div>
     </body>
 </html>
