--- a/assets/EFL30/catalog.html
+++ b/assets/EFL30/catalog.html
@@ -1,10 +1,13 @@
 ---
 layout: page
 title: 单页/Catalog
-parent: EFL30
+parent: EFL30/30C
 ---
-<h2>{{page.title}}</h2>
-<ul>
-    <li><a href="/assets/EFL30/catalog/EFL30中文单页.pdf">中文单页</a></li>
-    <li><a href="/assets/EFL30/catalog/EFL30英文单页.pdf">英文单页</a></li>
-</ul>
+<head></head>
+<body>
+    <h2>{{page.title}}</h2>
+    <ul>
+        <li><a href="/assets/EFL30/catalog/EFL30中文单页.pdf">中文单页</a></li>
+        <li><a href="/assets/EFL30/catalog/EFL30英文单页.pdf">英文单页</a></li>
+    </ul>
+</body>
