--- a/assets/power-supply/overseas/overseas.html
+++ b/assets/power-supply/overseas/overseas.html
@@ -3,7 +3,13 @@ layout: page
 title: 进口电源/overseas
 parent: 电源/power supply
 ---
-<h2>{{page.title}}</h2>
-<ul>
-    <li><a href="\assets\power-supply\overseas\overseas-catalog.pdf">英文单页</a></li>
-</ul>
+<head>
+    <style>
+        .power-name {color: #991601;}
+    </style>
+</head>
+<body>
+    <h2>{{page.title}}</h2>
+    <h3><a class = 'power-name' href="https://www.hafele.com.de/en/product/driver-ps-4/P-00926506/">电源 PS 4</a></h3>
+    <p>点击<a href="\assets\power-supply\overseas\overseas-catalog.pdf">此处</a>下载英文单页</p> 
+</body>
