added external parts to efl30

--- a/EFL30.html
+++ b/EFL30.html
@@ -30,6 +30,14 @@ has_children: true
                 <td>EFL30C</td>
                 <td>237.59.071</td>
             </tr>
+            <tr>
+                <td>外接读头（可选）</td>
+                <td>237.59.063</td>
+            </tr>
+            <tr>
+                <td>外接电源线（可选）</td>
+                <td>237.59.102</td>
+            </tr>
         </table>
         <div class="responsive"><img src="/assets/EFL30/EFL30.jpg" alt=""></div>
     </body>
