--- a/assets/app-hdm/loading-macro.html
+++ b/assets/app-hdm/loading-macro.html
@@ -16,5 +16,5 @@ parent: app(HDM)
         <iframe src="//player.bilibili.com/player.html?aid=508518740&bvid=BV1Fu411274J&cid=494750305&page=1" 
         scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
     </div>
-    <p>to be continued</p>
+    <p>也可点击<a href="https://www.bilibili.com/video/BV1Fu411274J?share_source=copy_web">此处</a>至B站观看此视频</p>
 </body>
