--- a/test-unit.html
+++ b/test-unit.html
@@ -15,9 +15,11 @@ permalink: /test-unit
         </style>
     </head>
     <body>
-        <h2><a class="title"
+        <h2>
+            <a class="title"
             href="https://www.hafele.com.de/en/product/test-device-for-efl-3-dialock-furniture-lock/P-00926526/">
-            {{ page.title }}</a>
+            {{ page.title }}
+            </a>
         </h2>
         <table>
             <tr>
